<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:background="@drawable/wave"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amaranth_bold"
            android:text="Login"
            android:textColor="#000000"
            android:textSize="45sp" />

        <TextView
            android:id="@id/signup_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amaranth_bold"
            android:gravity="right"
            android:text="Sign Up"
            android:textColor="#000000"
            android:textSize="28sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/enter_your_email"
            android:textColor="#070707"
            android:textSize="20dp"/>



        <EditText

            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@drawable/linear_activity_in_activity_first_run_second_background_on_focus"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="20dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="#928D98"
            android:textSize="20sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/enter_your_password"
            android:textColor="#070707"
            android:textSize="20dp"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/username"
            android:background="@drawable/linear_activity_in_activity_first_run_second_background_on_focus"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="20dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#FF928D98"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Forgot your login details?"
            android:textColor="#6C9FFF"
            android:textStyle="bold" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/button_round"
            android:fontFamily="serif"
            android:text="@string/login"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>